# slack-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  publish.yml
slack_clients/: __init__.py
